# cogen-est-baseline

./: .env.example  .gitignore  README.md  pyproject.toml
src/cogen_est_baseline/: config.py
src/cogen_est_baseline/baseline/: bands.py  lookup.py  mfrr_direction.py  predict.py
src/cogen_est_baseline/data/: esios_client.py  indicators.py  load.py  stitching.py
src/cogen_est_baseline/eval/: metrics.py  splits.py
src/cogen_est_baseline/models/: features.py  pmd_degradation.py  quantile_gbm.py
src/cogen_est_baseline/pipelines/: baseline_pipeline.py  compare_degradation.py  ingest_pipeline.py  quantile_gbm_pipeline.py
tests/: test_bands.py  test_features.py  test_indicators.py  test_lookup.py  test_pmd_degradation.py  test_stitching.py
